tcp server interface