@@ -167,6 +167,15 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
 <!--            <plugin>-->
 <!--                <groupId>com.igormaznitsa</groupId>-->
 <!--                <artifactId>jbbp-maven-plugin</artifactId>-->
